# kernelserve

./: .gitignore  .worktreeinclude  CLAUDE.md  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  rust-toolchain.toml  ~wq
.claude/: settings.json
.claude/agents/: benchmarker.md  kernel-dev.md  observability.md  serving-dev.md
.claude/commands/: bench.md  new-kernel.md  otel-check.md  slurm-submit.md
.github/workflows/: bench-report.yml  ci.yml  slurm-dry-run.yml
docs/: allowed_modules.txt  architecture.md  git-workflow.md  hpc-setup.md  kernel-dev-guide.md  serving-guide.md
docs/plans/: phase1-kernel.md  phase2-triton-benchmark.md  phase3-observability.md  phase4-nibi-h100.md  phase5-usability.md  phase6-local-loop.md
experiments/: CLAUDE.md  bench_rms_norm.py  mlflow_setup.py
kernels/: CLAUDE.md
kernels/cuda_oxide/: Cargo.toml
kernels/cuda_oxide/benches/: kernel_bench.rs
kernels/cuda_oxide/src/: cpu_ref.rs  fused_attn.rs  lib.rs  rms_norm.rs
kernels/cuda_oxide/tests/: correctness.rs
kernels/cuda_oxide/tests/fixtures/: rms_norm_4x4096.npz
kernels/pyo3_bindings/: Cargo.toml  pyproject.toml
kernels/pyo3_bindings/src/: lib.rs
kernels/rms_norm_standalone/: Cargo.toml  rust-toolchain.toml
kernels/rms_norm_standalone/.cargo/: config.toml
kernels/rms_norm_standalone/src/: main.rs
kernels/triton/: fused_attn.py  rms_norm.py
kernels/triton/tests/: test_rms_norm.py
kernelserve/: __init__.py  otel.py
kernelserve/cli/: _mlflow_uri.py  bench.py  compare.py  main.py  new_kernel.py  submit.py
observability/: CLAUDE.md
observability/grafana/dashboards/: kernelserve.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/metrics/: gpu.py
observability/otel/: collector.yaml  instrumentation.py
observability/prometheus/: scrape_config.yaml
scripts/: check_deps.sh  dev_setup.sh  teardown.sh
serving/: CLAUDE.md
serving/load_gen/: locustfile.py
serving/load_gen/payloads/: sample_batch.json
serving/ray_serve/: config.yaml  deployment.py
serving/triton_backends/cuda_oxide_backend/: config.pbtxt
serving/triton_backends/cuda_oxide_backend/1/: model.py
serving/triton_backends/triton_native_backend/: config.pbtxt
serving/triton_backends/triton_native_backend/1/: model.py
slurm/: bench_job.sh  bench_rms_norm_phase2.sh  bench_rms_norm_phase3.sh  bench_rms_norm_phase4_nibi.sh  serving_job.sh
slurm/scripts/: setup_env.sh  teardown.sh
slurm/templates/: bench_job.sh  gpu_interactive.sh  serving_job.sh
tests/benchmark/: conftest.py
tests/unit/: test_pyo3_cpu.py  test_rms_norm_triton.py  test_submit.py
