[project]
name = "kernelserve"
version = "0.1.0"
description = "GPU kernel benchmarking: cuda-oxide vs Triton vs PyTorch, served via NVIDIA Triton + Ray Serve"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "triton>=3.0.0; sys_platform == 'linux'",
    "torch>=2.3.0",
    "ray[serve]>=2.10.0",
    "mlflow>=2.12.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "locust>=2.24.0",
    "numpy>=1.26.0",
    "tritonclient[grpc,http]>=2.44.0",
    "grpcio>=1.62.0",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernels", "serving", "observability", "experiments"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "ipython>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: marks tests requiring a physical CUDA GPU (deselect with -m 'not gpu')",
    "slow: marks tests that take >10s",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
