[package]
name        = "kernelserve-kernels"
version     = "0.1.0"
edition     = "2021"
description = "Custom CUDA GPU kernels for KernelServe (Phase 1: sm_80 A100)"
license     = "MIT"

[features]
default = ["sm80"]
sm80 = []   # Narval A100 (Phase 1)
sm90 = []   # Nibi H100 (Phase 2, not yet active)

[dependencies]
# TODO: replace with the confirmed git dep once cuda-oxide upstream is pinned
# cuda-oxide = { git = "https://github.com/<org>/cuda-oxide", rev = "<commit-sha>" }
thiserror = "1"
anyhow    = "1"
tracing   = "0.1"

[dev-dependencies]
approx    = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "kernel_bench"
harness = false

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
