[package]
name        = "kernelserve-kernels"
version     = "0.1.0"
edition     = "2021"
description = "Custom CUDA GPU kernels for KernelServe (Phase 1: sm_80 A100)"
license     = "MIT"

[features]
default = ["sm80"]
sm80 = []                                # Narval A100 (Phase 1)
sm90 = []                                # Nibi H100 (Phase 2, not yet active)
gpu  = []                                # kept for src/rms_norm.rs cfg guards (deprecated)

[dependencies]
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide", rev = "f819f23fe035ec1c24b8ec06e738b62a9f377140" }
cuda-host   = { git = "https://github.com/NVlabs/cuda-oxide", rev = "f819f23fe035ec1c24b8ec06e738b62a9f377140" }
cuda-core   = { git = "https://github.com/NVlabs/cuda-oxide", rev = "f819f23fe035ec1c24b8ec06e738b62a9f377140" }
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
ndarray     = "0.16"
ndarray-npy = "0.9"

[dev-dependencies]
approx    = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "rms_norm"
path = "src/bin/rms_norm.rs"

[[bench]]
name    = "kernel_bench"
harness = false

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
